add edit for all lists

--- a/rent_list.html
+++ b/rent_list.html
@@ -558,6 +558,10 @@
                                                             <i class="uil-eye"></i>
                                                         </a>
 
+                                                        <a href="edit_rent_contract.html" class="btn d-flex align-items-center justify-content-between align-content-center btn-primary chat-send waves-effect waves-light">
+                                                            <i class="uil-edit"></i>
+                                                        </a>
+
                                                         <button class="btn d-flex align-items-center justify-content-between align-content-center btn-danger  chat-send waves-effect waves-light">
                                                             <i class="uil-trash-alt"></i>
                                                         </button>
