--- a/cars_list.html
+++ b/cars_list.html
@@ -606,6 +606,10 @@
                                                             <i class="uil-eye"></i>
                                                         </a>
 
+                                                        <a href="edit_car.html" class="btn d-flex align-items-center justify-content-between align-content-center btn-primary chat-send waves-effect waves-light">
+                                                            <i class="uil-edit"></i>
+                                                        </a>
+
                                                         <button class="btn d-flex align-items-center justify-content-between align-content-center btn-danger  chat-send waves-effect waves-light">
                                                             <i class="uil-trash-alt"></i>
                                                         </button>
