add some changes and pages

--- a/index.html
+++ b/index.html
@@ -378,20 +378,20 @@
                                 <i class="bx bx-list-ol "></i>
                                 
                                 <span>
-                                    عقود الايجار
+                                    تكاليف افروع
                                 </span>
                             </a>
 
                             <ul class="sub-menu" aria-expanded="false">
                                 <li>
                                     <a href="contracts.html">
-                                        اضافة عقد
+                                        اضافة تكليف
                                     </a>
                                 </li>
 
                                 <li>
                                     <a href="rent_list.html">
-                                        قائمة العقود
+                                        قائمة تكاليف الفروع
                                     </a>
                                 </li>
                             </ul>
@@ -461,9 +461,33 @@
                                     </a>
                                 </li>
 
-                                 <li>
+                                <li>
                                     <a href="contract_list.html"">
-                                    قائمه  العروض
+                                    قائمه  العقود
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+
+                        <li>
+                            <a  href="javascript: void(0);" class="has-arrow waves-effect">
+                                <i class="bx bx-dollar-circle"></i>
+                                
+                                <span>
+                                عروض الاسعار
+                                </span>
+                            </a>
+
+                            <ul class="sub-menu" aria-expanded="false">
+                                <li>
+                                    <a href="price.html">
+                                    اضافة عرض  
+                                    </a>
+                                </li>
+
+                                <li>
+                                    <a href="price_list.html">
+                                    قائمه  عروض الاسعار
                                     </a>
                                 </li>
                             </ul>
@@ -515,7 +539,7 @@
                                 <img src="assets/images/list.svg" alt="" />
 
                                 <h4>
-                                    عقود الايجار
+                                    تكاليف الفروع
                                 </h4>
                             </a>
                         </div>
@@ -547,6 +571,16 @@
 
                                 <h4> 
                                     عقود التركيب
+                                </h4>
+                            </a>
+                        </div>
+
+                        <div class="col-lg-4 col-md-6 col-6 mb-4">
+                            <a href="price.html" class="box-shape">
+                                <img src="assets/images/list.svg" alt="" />
+
+                                <h4> 
+                                    عروض الاسعار
                                 </h4>
                             </a>
                         </div>
