--- a/price.html
+++ b/price.html
@@ -506,7 +506,7 @@
                         <div class="col-12">
                             <div class="page-title-box d-flex align-items-center justify-content-between">
                                 <h4 class="mb-0">
-                                    تكاليف الفروع
+                                  اضافة عرض سعر     
                                 </h4>
                             </div>
                         </div>
@@ -519,109 +519,55 @@
 
                                     <div class="col-lg-6 col-12 mb-3">
                                         <div class="form-group">
-                                            <input type="text" class="form-control"  placeholder=" اسم الفرع    ">
-                                        </div>
-                                    </div> 
-
-                                    <div class="col-12 mb-3">
-                                        <div class="page-title-box d-flex align-items-center justify-content-between">
-                                            <h4 class="mb-0">
-                                            عقد الايجار
-                                            </h4>
-                                        </div>
-                                    </div>
-
-                                    <div class="col-lg-6 col-12 mb-3">
-                                        <div class="form-group">
-                                            <input type="text" class="form-control"  placeholder="  رقم مالك العقار    ">
+                                            <input type="text" class="form-control" placeholder=" الفرع  ">
                                         </div>
                                     </div>  
 
                                     <div class="col-lg-6 col-12 mb-3">
                                         <div class="form-group">
-                                            <input type="text" class="form-control"  placeholder="  تاريخ بداية العقد   ">
+                                            <input type="text" class="form-control" placeholder="  التاريخ ">
                                         </div>
                                     </div> 
 
                                     <div class="col-lg-6 col-12 mb-3">
                                         <div class="form-group">
-                                            <input type="text" class="form-control"  placeholder="  تاريخ نهاية الععقد    ">
+                                            <input type="text" class="form-control" placeholder="  رقم العرض ">
+                                        </div>
+                                    </div>  
+
+                                    <div class="col-lg-6 col-12 mb-3">
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" placeholder=" اسم العميل  ">
                                         </div>
                                     </div> 
 
                                     <div class="col-lg-6 col-12 mb-3">
                                         <div class="form-group">
-                                            <input type="text" class="form-control"  placeholder="  المبلغ   ">
+                                            <input type="text" class="form-control" placeholder="  وصف العرض ">
+                                        </div>
+                                    </div>  
+
+                                    <div class="col-lg-6 col-12 mb-3">
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" placeholder="  السعر ">
+                                        </div>
+                                    </div>  
+
+                                    <div class="col-lg-6 col-12 mb-3">
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" placeholder="  الضمان ">
+                                        </div>
+                                    </div>  
+
+                                    <div class="col-lg-6 col-12 mb-3">
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" placeholder="  تاريخ صلاحية العرض ">
                                         </div>
                                     </div> 
 
                                     <div class="col-lg-6 col-12 mb-3">
                                         <div class="form-group">
-                                            <input type="text" class="form-control" placeholder=" استحقاق دفعة الايجار">
-                                        </div>
-                                    </div> 
-
-                                    <div class="col-12 mb-3">
-                                        <div class="page-title-box d-flex align-items-center justify-content-between">
-                                            <h4 class="mb-0">
-                                            فواتير النت - الجولات - الهاتف
-                                            </h4>
-                                        </div>
-                                    </div>
-
-                                    <div class="col-lg-6 col-12 mb-3">
-                                        <div class="form-group">
-                                            <input type="text" class="form-control" placeholder="   رقم السداد  ">
-                                        </div>
-                                    </div> 
-
-                                    <div class="col-lg-6 col-12 mb-3">
-                                        <div class="form-group">
-                                            <input type="text" class="form-control" placeholder="   رمز السداد  ">
-                                        </div>
-                                    </div> 
-
-                                    <div class="col-lg-6 col-12 mb-3">
-                                        <div class="form-group">
-                                            <input type="text" class="form-control" placeholder="   رقم الهاتف \ الجوال  ">
-                                        </div>
-                                    </div> 
-
-                                    <div class="col-lg-6 col-12 mb-3">
-                                        <div class="form-group">
-                                            <input type="text" class="form-control" placeholder="   المستخدم  ">
-                                        </div>
-                                    </div> 
-
-                                    <div class="col-lg-6 col-12 mb-3">
-                                        <div class="form-group">
-                                            <input type="text" class="form-control" placeholder="  التاريخ  ">
-                                        </div>
-                                    </div> 
-
-                                    <div class="col-12 mb-3">
-                                        <div class="page-title-box d-flex align-items-center justify-content-between">
-                                            <h4 class="mb-0">
-                                                فواتير الكهرباء
-                                            </h4>
-                                        </div>
-                                    </div>
-
-                                    <div class="col-lg-6 col-12 mb-3">
-                                        <div class="form-group">
-                                            <input type="text" class="form-control" placeholder="   رمز السداد  ">
-                                        </div>
-                                    </div> 
-
-                                    <div class="col-lg-6 col-12 mb-3">
-                                        <div class="form-group">
-                                            <input type="text" class="form-control" placeholder="  رمز السداد العمل   ">
-                                        </div>
-                                    </div> 
-
-                                    <div class="col-lg-6 col-12 mb-3">
-                                        <div class="form-group">
-                                            <input type="text" class="form-control" placeholder="   تاريخ الاستحقاق  ">
+                                            <input type="text" class="form-control" placeholder="  التعاقد ">
                                         </div>
                                     </div> 
 
@@ -631,7 +577,7 @@
                                                 <i class="bx bx-plus float-right"></i>
         
                                                 <span class="d-sm-inline-block ml-2">
-                                                أضافة تكليف
+                                                أضافة عرض
                                                 </span>
                                             </button>
                                         </div>
@@ -643,6 +589,7 @@
                 </div>
             </div>
         </div>
+
     </div>
 
     <script src="assets/libs/jquery/jquery.min.js"></script>
