--- a/single_car.html
+++ b/single_car.html
@@ -385,20 +385,20 @@
                                 <i class="bx bx-list-ol "></i>
                                 
                                 <span>
-                                    عقود الايجار
+                                    تكاليف افروع
                                 </span>
                             </a>
 
                             <ul class="sub-menu" aria-expanded="false">
                                 <li>
                                     <a href="contracts.html">
-                                        اضافة عقد
+                                        اضافة تكليف
                                     </a>
                                 </li>
 
                                 <li>
                                     <a href="rent_list.html">
-                                        قائمة العقود
+                                        قائمة تكاليف الفروع
                                     </a>
                                 </li>
                             </ul>
@@ -468,9 +468,9 @@
                                     </a>
                                 </li>
 
-                                 <li>
+                                <li>
                                     <a href="contract_list.html"">
-                                    قائمه  العروض
+                                    قائمه  العقود
                                     </a>
                                 </li>
                             </ul>
@@ -530,7 +530,19 @@
                                                 </th>
 
                                                 <th>
-                                                    تعويض السائق
+                                                    اسم السائق
+                                                </th>
+
+                                                <th>
+                                                    رقم اقامة السائق
+                                                </th>
+
+                                                <th>
+                                                    تاريخ بداية التعويض
+                                                </th>
+
+                                                <th>
+                                                    تارخ نهاية التعويض
                                                 </th>
 
                                                 <th>
@@ -572,7 +584,19 @@
                                                 </td>
 
                                                 <td>
-                                                    يوجد تعويض
+                                                    محمد احمد
+                                                </td>
+
+                                                <td>
+                                                123412
+                                                </td>
+
+                                                <td>
+                                                    20-12-2020
+                                                </td>
+
+                                                <td>
+                                                    21-12-2020
                                                 </td>
 
                                                 <td>
