--- a/single_client.html
+++ b/single_client.html
@@ -383,20 +383,20 @@
                                 <i class="bx bx-list-ol "></i>
                                 
                                 <span>
-                                    عقود الايجار
+                                    تكاليف افروع
                                 </span>
                             </a>
 
                             <ul class="sub-menu" aria-expanded="false">
                                 <li>
                                     <a href="contracts.html">
-                                        اضافة عقد
+                                        اضافة تكليف
                                     </a>
                                 </li>
 
                                 <li>
                                     <a href="rent_list.html">
-                                        قائمة العقود
+                                        قائمة تكاليف الفروع
                                     </a>
                                 </li>
                             </ul>
@@ -466,9 +466,33 @@
                                     </a>
                                 </li>
 
-                                 <li>
+                                <li>
                                     <a href="contract_list.html"">
-                                    قائمه  العروض
+                                    قائمه  العقود
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+
+                        <li>
+                            <a  href="javascript: void(0);" class="has-arrow waves-effect">
+                                <i class="bx bx-dollar-circle"></i>
+                                
+                                <span>
+                                عروض الاسعار
+                                </span>
+                            </a>
+
+                            <ul class="sub-menu" aria-expanded="false">
+                                <li>
+                                    <a href="price.html">
+                                    اضافة عرض  
+                                    </a>
+                                </li>
+
+                                <li>
+                                    <a href="price_list.html">
+                                    قائمه  عروض الاسعار
                                     </a>
                                 </li>
                             </ul>
