--- a/cars.html
+++ b/cars.html
@@ -378,20 +378,20 @@
                                 <i class="bx bx-list-ol "></i>
                                 
                                 <span>
-                                    عقود الايجار
+                                    تكاليف افروع
                                 </span>
                             </a>
 
                             <ul class="sub-menu" aria-expanded="false">
                                 <li>
                                     <a href="contracts.html">
-                                        اضافة عقد
+                                        اضافة تكليف
                                     </a>
                                 </li>
 
                                 <li>
                                     <a href="rent_list.html">
-                                        قائمة العقود
+                                        قائمة تكاليف الفروع
                                     </a>
                                 </li>
                             </ul>
@@ -461,9 +461,33 @@
                                     </a>
                                 </li>
 
-                                 <li>
+                                <li>
                                     <a href="contract_list.html"">
-                                    قائمه  العروض
+                                    قائمه  العقود
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+
+                        <li>
+                            <a  href="javascript: void(0);" class="has-arrow waves-effect">
+                                <i class="bx bx-dollar-circle"></i>
+                                
+                                <span>
+                                عروض الاسعار
+                                </span>
+                            </a>
+
+                            <ul class="sub-menu" aria-expanded="false">
+                                <li>
+                                    <a href="price.html">
+                                    اضافة عرض  
+                                    </a>
+                                </li>
+
+                                <li>
+                                    <a href="price_list.html">
+                                    قائمه  عروض الاسعار
                                     </a>
                                 </li>
                             </ul>
@@ -549,7 +573,25 @@
 
                                     <div class="col-lg-6 col-12 mb-3">
                                         <div class="form-group">
-                                            <input type="text" class="form-control" placeholder=" تعويض السائق ">
+                                            <input type="text" class="form-control" placeholder=" اسم السائق  ">
+                                        </div>
+                                    </div> 
+
+                                    <div class="col-lg-6 col-12 mb-3">
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" placeholder="  رقم اقامة السائق ">
+                                        </div>
+                                    </div> 
+
+                                    <div class="col-lg-6 col-12 mb-3">
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" placeholder="  تاريخ بداية التفويض ">
+                                        </div>
+                                    </div> 
+
+                                    <div class="col-lg-6 col-12 mb-3">
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" placeholder="  تاريخ نهاية التفويض ">
                                         </div>
                                     </div> 
 
