--- a/index.html
+++ b/index.html
@@ -378,9 +378,24 @@
                                 <i class="bx bx-list-ol "></i>
                                 
                                 <span>
-                                    تكاليف افروع
+                                    تكاليف الفروع
                                 </span>
                             </a>
+
+                            <ul class="sub-menu" aria-expanded="false">
+                                <li>
+                                    <a href="contracts.html">
+                                        اضافة تكليف
+                                    </a>
+                                </li>
+
+                                <li>
+                                    <a href="rent_list.html">
+                                        قائمة تكاليف الفروع
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
 
                             <ul class="sub-menu" aria-expanded="false">
                                 <li>
@@ -535,7 +550,7 @@
                         </div>
 
                         <div class="col-lg-4 col-md-6 col-6 mb-4">
-                            <a href="rent_contract.html" class="box-shape">
+                            <a href="contracts.html" class="box-shape">
                                 <img src="assets/images/list.svg" alt="" />
 
                                 <h4>
@@ -566,7 +581,7 @@
                         </div>
 
                         <div class="col-lg-4 col-md-6 col-6 mb-4">
-                            <a href="contracts.html" class="box-shape">
+                            <a href="rent_contract.html" class="box-shape">
                                 <img src="assets/images/setting.svg" alt="" />
 
                                 <h4> 
