--- a/single_contract.html
+++ b/single_contract.html
@@ -385,7 +385,7 @@
                                 <i class="bx bx-list-ol "></i>
                                 
                                 <span>
-                                    تكاليف افروع
+                                    تكاليف الفروع
                                 </span>
                             </a>
 
