--- a/edit_contract.html
+++ b/edit_contract.html
@@ -378,7 +378,7 @@
                                 <i class="bx bx-list-ol "></i>
                                 
                                 <span>
-                                    تكاليف افروع
+                                    تكاليف الفروع
                                 </span>
                             </a>
 
