--- a/edit_free_fix.html
+++ b/edit_free_fix.html
@@ -378,9 +378,84 @@
                                 <i class="bx bx-list-ol "></i>
                                 
                                 <span>
-                                    تكاليف افروع
+                                    تكاليف الفروع
                                 </span>
                             </a>
+
+                            <ul class="sub-menu" aria-expanded="false">
+                                <li>
+                                    <a href="contracts.html">
+                                        اضافة تكليف
+                                    </a>
+                                </li>
+
+                                <li>
+                                    <a href="rent_list.html">
+                                        قائمة تكاليف الفروع
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+
+                            <ul class="sub-menu" aria-expanded="false">
+                                <li>
+                                    <a href="contracts.html">
+                                        اضافة تكليف
+                                    </a>
+                                </li>
+
+                                <li>
+                                    <a href="rent_list.html">
+                                        قائمة تكاليف الفروع
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+
+                            <ul class="sub-menu" aria-expanded="false">
+                                <li>
+                                    <a href="contracts.html">
+                                        اضافة تكليف
+                                    </a>
+                                </li>
+
+                                <li>
+                                    <a href="rent_list.html">
+                                        قائمة تكاليف الفروع
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+
+                            <ul class="sub-menu" aria-expanded="false">
+                                <li>
+                                    <a href="contracts.html">
+                                        اضافة تكليف
+                                    </a>
+                                </li>
+
+                                <li>
+                                    <a href="rent_list.html">
+                                        قائمة تكاليف الفروع
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+
+                            <ul class="sub-menu" aria-expanded="false">
+                                <li>
+                                    <a href="contracts.html">
+                                        اضافة تكليف
+                                    </a>
+                                </li>
+
+                                <li>
+                                    <a href="rent_list.html">
+                                        قائمة تكاليف الفروع
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
 
                             <ul class="sub-menu" aria-expanded="false">
                                 <li>
