--- a/payment_fix_list.html
+++ b/payment_fix_list.html
@@ -381,13 +381,29 @@
                         </li>
 
                         <li>
+                          
                             <a  href="javascript: void(0);" class="has-arrow waves-effect">
                                 <i class="bx bx-list-ol "></i>
                                 
                                 <span>
-                                    تكاليف افروع
+                                    تكاليف الفروع
                                 </span>
                             </a>
+
+                            <ul class="sub-menu" aria-expanded="false">
+                                <li>
+                                    <a href="contracts.html">
+                                        اضافة تكليف
+                                    </a>
+                                </li>
+
+                                <li>
+                                    <a href="rent_list.html">
+                                        قائمة تكاليف الفروع
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
 
                             <ul class="sub-menu" aria-expanded="false">
                                 <li>
