--- a/single_client.html
+++ b/single_client.html
@@ -379,6 +379,7 @@
                         </li>
 
                         <li>
+                          
                             <a  href="javascript: void(0);" class="has-arrow waves-effect">
                                 <i class="bx bx-list-ol "></i>
                                 
@@ -386,6 +387,36 @@
                                     تكاليف افروع
                                 </span>
                             </a>
+
+                            <ul class="sub-menu" aria-expanded="false">
+                                <li>
+                                    <a href="contracts.html">
+                                        اضافة تكليف
+                                    </a>
+                                </li>
+
+                                <li>
+                                    <a href="rent_list.html">
+                                        قائمة تكاليف الفروع
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+
+                            <ul class="sub-menu" aria-expanded="false">
+                                <li>
+                                    <a href="contracts.html">
+                                        اضافة تكليف
+                                    </a>
+                                </li>
+
+                                <li>
+                                    <a href="rent_list.html">
+                                        قائمة تكاليف الفروع
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
 
                             <ul class="sub-menu" aria-expanded="false">
                                 <li>
