--- a/single_rent.html
+++ b/single_rent.html
@@ -404,6 +404,81 @@
                             </ul>
                         </li>
 
+                            <ul class="sub-menu" aria-expanded="false">
+                                <li>
+                                    <a href="contracts.html">
+                                        اضافة تكليف
+                                    </a>
+                                </li>
+
+                                <li>
+                                    <a href="rent_list.html">
+                                        قائمة تكاليف الفروع
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+
+                            <ul class="sub-menu" aria-expanded="false">
+                                <li>
+                                    <a href="contracts.html">
+                                        اضافة تكليف
+                                    </a>
+                                </li>
+
+                                <li>
+                                    <a href="rent_list.html">
+                                        قائمة تكاليف الفروع
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+
+                            <ul class="sub-menu" aria-expanded="false">
+                                <li>
+                                    <a href="contracts.html">
+                                        اضافة تكليف
+                                    </a>
+                                </li>
+
+                                <li>
+                                    <a href="rent_list.html">
+                                        قائمة تكاليف الفروع
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+
+                            <ul class="sub-menu" aria-expanded="false">
+                                <li>
+                                    <a href="contracts.html">
+                                        اضافة تكليف
+                                    </a>
+                                </li>
+
+                                <li>
+                                    <a href="rent_list.html">
+                                        قائمة تكاليف الفروع
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+
+                            <ul class="sub-menu" aria-expanded="false">
+                                <li>
+                                    <a href="contracts.html">
+                                        اضافة تكليف
+                                    </a>
+                                </li>
+
+                                <li>
+                                    <a href="rent_list.html">
+                                        قائمة تكاليف الفروع
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+
                         <li>
                             <a  href="javascript: void(0);" class="has-arrow waves-effect">
                                 <i class="bx bxs-wrench"></i>
