--- a/edit_free_fix.html
+++ b/edit_free_fix.html
@@ -337,7 +337,7 @@
                             <ul class="sub-menu" aria-expanded="false">
                                 <li>
                                     <a href="clients.html">
-                                     اضافة جديد
+                                        اضافة جديد
                                     </a>
                                 </li>
 
@@ -390,82 +390,7 @@
                                 </li>
 
                                 <li>
-                                    <a href="rent_list.html">
-                                        قائمة تكاليف الفروع
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-
-                            <ul class="sub-menu" aria-expanded="false">
-                                <li>
-                                    <a href="contracts.html">
-                                        اضافة تكليف
-                                    </a>
-                                </li>
-
-                                <li>
-                                    <a href="rent_list.html">
-                                        قائمة تكاليف الفروع
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-
-                            <ul class="sub-menu" aria-expanded="false">
-                                <li>
-                                    <a href="contracts.html">
-                                        اضافة تكليف
-                                    </a>
-                                </li>
-
-                                <li>
-                                    <a href="rent_list.html">
-                                        قائمة تكاليف الفروع
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-
-                            <ul class="sub-menu" aria-expanded="false">
-                                <li>
-                                    <a href="contracts.html">
-                                        اضافة تكليف
-                                    </a>
-                                </li>
-
-                                <li>
-                                    <a href="rent_list.html">
-                                        قائمة تكاليف الفروع
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-
-                            <ul class="sub-menu" aria-expanded="false">
-                                <li>
-                                    <a href="contracts.html">
-                                        اضافة تكليف
-                                    </a>
-                                </li>
-
-                                <li>
-                                    <a href="rent_list.html">
-                                        قائمة تكاليف الفروع
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-
-                            <ul class="sub-menu" aria-expanded="false">
-                                <li>
-                                    <a href="contracts.html">
-                                        اضافة تكليف
-                                    </a>
-                                </li>
-
-                                <li>
-                                    <a href="rent_list.html">
+                                    <a href="contract_list.html">
                                         قائمة تكاليف الفروع
                                     </a>
                                 </li>
@@ -474,7 +399,7 @@
 
                         <li>
                             <a  href="javascript: void(0);" class="has-arrow waves-effect">
-                                  <i class="bx bxs-wrench"></i>
+                                <i class="bx bxs-wrench"></i>
                                 
                                 <span>
                                     عملاء الصيانة المجانية
@@ -498,7 +423,7 @@
 
                         <li>
                             <a  href="javascript: void(0);" class="has-arrow waves-effect">
-                                  <i class="bx bxs-wrench"></i>
+                                <i class="bx bxs-wrench"></i>
                                 
                                 <span>
                                     عملاء عقود الصيانة 
@@ -537,7 +462,7 @@
                                 </li>
 
                                 <li>
-                                    <a href="contract_list.html"">
+                                    <a href="rent_list.html">
                                     قائمه  العقود
                                     </a>
                                 </li>
