--- a/index.html
+++ b/index.html
@@ -286,6 +286,7 @@
                 </div>
             </div>
         </header>
+
         <div class="vertical-menu">
 
             <!-- LOGO -->
@@ -390,22 +391,7 @@
                                 </li>
 
                                 <li>
-                                    <a href="rent_list.html">
-                                        قائمة تكاليف الفروع
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-
-                            <ul class="sub-menu" aria-expanded="false">
-                                <li>
-                                    <a href="contracts.html">
-                                        اضافة تكليف
-                                    </a>
-                                </li>
-
-                                <li>
-                                    <a href="rent_list.html">
+                                    <a href="contract_list.html">
                                         قائمة تكاليف الفروع
                                     </a>
                                 </li>
@@ -477,7 +463,7 @@
                                 </li>
 
                                 <li>
-                                    <a href="contract_list.html"">
+                                    <a href="rent_list.html">
                                     قائمه  العقود
                                     </a>
                                 </li>
