--- a/single_contract.html
+++ b/single_contract.html
@@ -293,6 +293,7 @@
                 </div>
             </div>
         </header>
+        
         <div class="vertical-menu">
 
             <!-- LOGO -->
@@ -397,7 +398,7 @@
                                 </li>
 
                                 <li>
-                                    <a href="rent_list.html">
+                                    <a href="contract_list.html">
                                         قائمة تكاليف الفروع
                                     </a>
                                 </li>
@@ -469,7 +470,7 @@
                                 </li>
 
                                 <li>
-                                    <a href="contract_list.html"">
+                                    <a href="rent_list.html">
                                     قائمه  العقود
                                     </a>
                                 </li>
