--- a/single_free_fix.html
+++ b/single_free_fix.html
@@ -293,6 +293,7 @@
                 </div>
             </div>
         </header>
+        
         <div class="vertical-menu">
 
             <!-- LOGO -->
@@ -385,7 +386,7 @@
                                 <i class="bx bx-list-ol "></i>
                                 
                                 <span>
-                                    تكاليف افروع
+                                    تكاليف الفروع
                                 </span>
                             </a>
 
@@ -397,22 +398,7 @@
                                 </li>
 
                                 <li>
-                                    <a href="rent_list.html">
-                                        قائمة تكاليف الفروع
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-
-                            <ul class="sub-menu" aria-expanded="false">
-                                <li>
-                                    <a href="contracts.html">
-                                        اضافة تكليف
-                                    </a>
-                                </li>
-
-                                <li>
-                                    <a href="rent_list.html">
+                                    <a href="contract_list.html">
                                         قائمة تكاليف الفروع
                                     </a>
                                 </li>
@@ -484,7 +470,7 @@
                                 </li>
 
                                 <li>
-                                    <a href="contract_list.html"">
+                                    <a href="rent_list.html">
                                     قائمه  العقود
                                     </a>
                                 </li>
